<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">StockUp</string>

    <!-- Buttons -->
    <string name="button_add">Add</string>
    <string name="button_discard">Discard</string>
    <string name="button_add_grocery">Add Grocery</string>
    <string name="button_checkout">Checkout</string>
    <string name="button_cancel">Cancel</string>

    <!-- Dialog -->
    <string name="unsaved_changes_title">Unsaved Changes</string>
    <string name="unsaved_changes_message">You have unsaved changes, would you like to add this grocery or discard it?</string>
    <string name="open">Welcome to the StockUp grocery organizer!</string>
    <string name="add_view_text">Add Grocery</string>
    <string name="dummy_grocery">Milk</string>
    <string name="no_groceries">No Groceries.</string>
    <string name="action_settings">Settings</string>
    <string name="add_location_text">Add Location to Grocery</string>
    <string name="map_this_address">Map This Address</string>
    <string name="use_this_location">Use This Location</string>
    <string name="grocery_name">Grocery Name</string>
    <string name="search_button">Search</string>
    <string name="arrow"><![CDATA[<]]></string>
    <string name="grocery_search">Search list</string>
    <string name="grocery_list">Grocery List</string>
    <string name="cancel">Cancel</string>
    <string name="brand">Brand</string>
    <string name="dummy_brand">Fake Brand</string>
    <string name="expires">Expires In:</string>
    <string name="category">Category/Aisle</string>
    <string name="quantity">Quantity</string>
    <string name="stockup">StockUp</string>
    <string name="brand_name">Brand Name</string>
    <string name="title_activity_google_play_services">GooglePlayServicesActivity</string>
    <string name="title_activity_splash">SplashActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="namelabel">namelabel</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="title_activity_forgot_password">ForgotPasswordActivity</string>




    <string name="signIn">Sign In</string>
    <string name="submit">Submit</string>
    <string name="orText">Or</string>
    <string name="createAccount">Create Account</string>
    <string name="emailHint">Email</string>
    <string name="usernameHint">Username</string>
    <string name="passwordHint">Password</string>
    <string name="confirmPasswordHint">Confirm Password</string>
    <string name="title_activity_launcher">LauncherActivity</string>
    <string name="changing_fragments">Changing Fragments</string>
    <string name="title_activity_create_account">CreateAccountActivity</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>


    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_register"><b>Sign in</b> or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register">Create Account</string>
    <string name="menu_forgot_password">Recover lost password</string>
    <string name="login_progress_signing_in">Signing in&#8230;</string>
    <string name="login_progress_password_email">Sending email&#8230;</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_duplicate_email">This email address is already in use</string>
    <string name="error_duplicate_username">This username is already in use</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_invalid_confirm_password">Passwords do not match</string>
    <string name="error_field_required">This field is required</string>
    <string name="suggest_button">Suggest</string>


    <!-- BARCODE SCANNER STRINGS -->
    <string name="scanner_activity">ZXing Scanner - Full Activity</string>
    <string name="scanner_fragment_activity">ZXing Scanner - Full Fragment Activity</string>
    <string name="simple_scanner_activity">ZXing Scanner - Simple Activity</string>
    <string name="simple_scanner_fragment_activity">ZXing Scanner - Simple Fragment Activity</string>
    <string name="simple_activity_sample">Simple Activity Sample</string>
    <string name="simple_fragment_sample">Simple Fragment Sample</string>
    <string name="activity_sample">Full Activity Sample</string>
    <string name="fragment_sample">Full Fragment Sample</string>
    <string name="toggle_flash">Flash</string>
    <string name="flash_on">Flash [ON]</string>
    <string name="flash_off">Flash [OFF]</string>
    <string name="auto_focus_on">Auto Focus [ON]</string>
    <string name="auto_focus_off">Auto Focus [OFF]</string>
    <string name="formats">Formats</string>
    <string name="choose_formats">Choose Formats</string>
    <string name="select_camera">Select a Camera</string>
    <string name="ok_button">OK</string>
    <string name="cancel_button">Cancel</string>
    <string name="title_activity_item_detail">ItemDetailActivity</string>
    <string name="edit_grocery_activity">Edit Grocery</string>


</resources>
