<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <TextView
        android:layout_marginTop="24dp"
        android:id="@+id/grocery_name"
        android:text="@string/grocery_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:layout_marginLeft="8dp"
        />

    <ImageButton
        android:id="@+id/barcode"
        android:background="@drawable/barcode_ico"
        android:layout_width="80sp"
        android:layout_height="50sp"
        android:layout_marginLeft="12sp"
        android:layout_marginTop="36sp"
        android:layout_marginRight="24sp"
        android:layout_alignParentRight="true"
        android:textSize="24sp"
        />

    <EditText
        android:id="@+id/grocery_edit_name"
        android:hint="@string/grocery_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/grocery_name"
        android:layout_toLeftOf="@id/barcode"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="12dp"
        />

    <TextView
        android:id="@+id/grocery_quantity"
        android:text="@string/quantity"
        android:layout_marginTop="12dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/grocery_edit_name"
        android:textSize="24sp"
        android:layout_marginLeft="8dp"
        />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/quantity_int"
        android:layout_below="@+id/grocery_quantity"
        android:spinnerMode="dropdown"
        android:layout_marginLeft="20dp"
        android:entries="@array/int_array"
        />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/quantity_type"
        android:layout_below="@+id/grocery_quantity"
        android:spinnerMode="dropdown"
        android:layout_marginLeft="96dp"
        android:entries="@array/item_array"
        />

    <TextView
        android:id="@+id/brand"
        android:text="@string/brand"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/quantity_type"
        android:textSize="24sp"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="8dp"
        />

    <EditText
        android:id="@+id/grocery_edit_brand"
        android:hint="@string/brand_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/brand"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="64dp"
        />

    <TextView
        android:id="@+id/expire_exhaust_date"
        android:text="Average Lifetime"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_below="@id/grocery_edit_brand"
        android:textSize="24sp"
        android:layout_marginLeft="8dp"
        />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ttl_int"
        android:layout_below="@+id/expire_exhaust_date"
        android:spinnerMode="dropdown"
        android:layout_marginLeft="20dp"
        android:entries="@array/int_array"
        />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ttl_type"
        android:layout_below="@+id/expire_exhaust_date"
        android:spinnerMode="dropdown"
        android:layout_marginLeft="96dp"
        android:entries="@array/date_array"
        />

    <TextView
        android:id="@+id/category"
        android:text="@string/category"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ttl_type"
        android:layout_marginTop="4dp"
        android:textSize="24sp"
        android:layout_marginLeft="8dp"
        />

    <EditText
        android:id="@+id/edit_category"
        android:hint="@string/category"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/category"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="64dp"
        />

    <TextView
        android:id="@+id/bottom_bar"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="-8dp"
        android:layout_alignParentBottom="true"
        android:background="#2a2a2a"
        android:layout_marginBottom="-10dp"
        />

    <Button
        android:id="@+id/add_button"
        android:text="@string/button_add_grocery"
        android:layout_width="150dp"
        android:layout_height="36dp"
        android:layout_marginTop="0dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="6dp"
        android:layout_centerHorizontal="true"
        android:background="#d3d3d3"
        />


</RelativeLayout>