<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".ListView">

    <Button
        android:id="@+id/add_grocery"
        android:text="@string/button_add_grocery"
        android:layout_width="fill_parent"
        android:layout_marginLeft="-145dp"
        android:layout_marginRight="-5dp"
        android:layout_marginTop="8dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@drawable/textlines"
        android:textColor="#b2b2b2"
        />

    <TextView
        android:id="@+id/plus"
        android:text="+"
        android:layout_alignParentTop="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:textColor="#b2b2b2"
        android:textSize="48dp"
        />

    <SearchView
        android:id="@+id/grocery_search"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/textlines"
        android:layout_marginTop="-4dp"
        android:layout_marginRight="-2dp"
        android:layout_marginLeft="-2dp"
        android:layout_below="@id/add_grocery"
        />

    <ListView
        android:id="@id/android:list"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:indicatorLeft="?android:attr/expandableListPreferredItemIndicatorLeft"
        android:divider="#d7d7d7"
        android:dividerHeight="0.5dp"
        android:layout_below="@id/grocery_search"
        android:layout_above="@+id/bottom_bar"
        />

    <TextView
        android:id="@id/android:empty"
        android:text="@string/no_groceries"
        android:gravity="center"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        />

    <TextView
        android:id="@id/bottom_bar"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:background="#2a2a2a"
        android:layout_marginBottom="-10dp"
        />

    <Button
        android:id="@+id/checkout"
        android:text="@string/button_checkout"
        android:layout_width="100dp"
        android:layout_height="36dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="0dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="6dp"
        android:layout_alignParentRight="true"
        android:background="#d3d3d3"
        />

    <Button
        android:id="@+id/suggest_grocery"
        android:text="@string/suggest_button"
        android:layout_width="100dp"
        android:layout_height="36dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="6dp"
        android:layout_marginTop="0dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:background="#d3d3d3"
        />

    <TextView
        android:id="@+id/suggest_opacity"
        android:layout_width="fill_parent"
        android:layout_height="470dp"
        android:background="#DC000000"
        android:visibility="invisible"
        />

    <ImageButton
        android:id="@+id/suggest_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/carbonara"
        android:visibility="invisible"
        android:clickable="false"
        />


</RelativeLayout>